# steam-login-tools

./: .gitignore  README.md  launcher.py  main.py  pyproject.toml  requirements.txt
Config/: __init__.py
Core/: EventJudgment.py  FileOperation.py  file_operation.py  network_threads.py  tcping.py
Core/EventAnimation/: AnimationObject.py  __init__.py  login_page.py  setting_page.py
Core/FileFunction/: JsonFunc.py  PathFunc.py  Template.py  __init__.py
Core/NetWorkFunction/: SteamAPI.py  __init__.py
Core/NetworkThreads/: DebugInfo.py  DownloadThread.py  PingServerThread.py  SteamLoginThread.py  __init__.py
Core/config/: __init__.py
Core/event_animation/: AnimationObject.py  __init__.py  login_page.py  setting_page.py
Core/share/: ErrorHandling.py  __init__.py
QSS/: launcher.qss  ui.qss
QSS/UiQss/: main.qss
Ui/: Icon.py  LeftWidget.py  NetWidget.py  SettingWidget.py  Share.py  StyleSheet.py  __init__.py
Ui/HomePage/: BannerWidget.py  LinkCard.py  __init__.py
Ui/LoginPage/: __init__.py
Ui/LoginWidget/: AddUserCard.py  ServerStateCard.py  UserInfoCard.py  __init__.py  act_info_wgt_set.py  add_act_wgt_set.py  server_status_wgt_set.py
Ui/OtherWidget/: __init__.py
Ui/SettingWidget/: __init__.py
Ui/SetupPage/: __init__.py
core/: __init__.py  event_animation.py  event_judgment.py  file_operation.py  network_threads.py  tcping.py
data/: fix_info_edit_content.html  ssfn_list.json
tools/: DebugInfo.py
ui/: __init__.py  left_widget.py  login_widget.py  net_widget.py  other_widget.py  pop_up_notification.py  setting_widget.py  share.py
(+81 files in other folders)
